fixed alignment of define button

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -111,7 +111,6 @@ a {
 }
 
 #new_word {
-  text-align: center;
 }
 
 .result {
